--- a/View/admin/confirm.twig
+++ b/View/admin/confirm.twig
@@ -14,7 +14,7 @@
 
 {% extends 'default_frame.twig' %}
 
-{% set menus = ['mailmagazine', '', ''] %}
+{% set menus = ['mailmagazine', 'mailmagazine'] %}
 
 {% block title %}メルマガ管理{% endblock %}
 {% block sub_title %}配信内容管理{% endblock %}
