--- a/View/admin/history_list.twig
+++ b/View/admin/history_list.twig
@@ -9,7 +9,7 @@
 #}
 {% extends 'default_frame.twig' %}
 
-{% set menus = ['mailmagazine', 'history'] %}
+{% set menus = ['mailmagazine', 'mailmagazine_history'] %}
 
 {% block title %}メルマガ管理{% endblock %}
 {% block sub_title %}配信履歴管理{% endblock %}
