--- a/View/admin/template_edit.twig
+++ b/View/admin/template_edit.twig
@@ -9,7 +9,7 @@
 #}
 {% extends 'default_frame.twig' %}
 
-{% set menus = ['mailmagazine', 'template'] %}
+{% set menus = ['mailmagazine', 'mailmagazine_template'] %}
 
 {% block title %}メルマガ管理{% endblock %}
 {% block sub_title %}テンプレート設定{% endblock %}
