--- a/View/entry_add_mailmaga.twig
+++ b/View/entry_add_mailmaga.twig
@@ -20,7 +20,7 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #}
 <dl>
-<dt>{{ form_label(form.mailmaga_flg) }}<span class="required">必須</span></dt>
+<dt>メールマガジン送付について<span class="required">必須</span></dt>
 <dd>
     <div class="form-group form-inline">
         {{ form_widget(form.mailmaga_flg) }}
