[ADD] Add select content type on the mail template page.

--- a/View/admin/confirm.twig
+++ b/View/admin/confirm.twig
@@ -70,7 +70,7 @@
                         <div class="box-body">
                             <div class="row text-center">
                                 <div class="col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
-                                    <button class="btn btn-primary btn-block btn-lg" onclick="changeAction('{{ url('admin_mail_magazine_commit') }}'); return false;">配信する</button>
+                                    <button class="btn btn-primary btn-block btn-lg" onclick="changeAction('{{ url('admin_mail_magazine_commit') }}/{{id}}'); return false;">配信する</button>
                                 </div>
                             </div>
                         </div><!-- /.box-body -->
