--- a/View/admin/template_edit.twig
+++ b/View/admin/template_edit.twig
@@ -37,6 +37,13 @@
                                 {{ form_errors(form.subject) }}
                             </div>
                         </div>
+                        <div class="form-group">
+                            {{ form_label(form.content_type) }}
+                            <div class="col-sm-9 col-lg-10">
+                                {{ form_widget(form.content_type) }}
+                                {{ form_errors(form.content_type) }}
+                            </div>
+                        </div>
 
                         <div class="form-group">
                             {{ form_label(form.body) }}
@@ -57,7 +64,7 @@
                             <div class="row text-center">
                                 <div class="col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
                                     <button class="btn btn-primary btn-block btn-lg"
-                                            onclick="document.content_page_form.submit();">登録
+                                            type="submit">登録
                                     </button>
                                 </div>
                             </div>
