--- a/View/admin/index.twig
+++ b/View/admin/index.twig
@@ -216,10 +216,15 @@ function fnChangeActionSubmit(action) {
                         <div class="col-md-12">
                             <ul class="sort-dd">
                                 <li class="dropdown">
-                                    <a class="dropdown-toggle" data-toggle="dropdown">20件<svg class="cb cb-angle-down icon_down"><use xlink:href="#cb-angle-down"></svg></a>
+
+                                    {% for pageMax in pageMaxis if pageMax.name == page_count %}
+                                    <a class="dropdown-toggle" data-toggle="dropdown">{{ pageMax.name|e }}件<svg class="cb cb-angle-down icon_down"><use xlink:href="#cb-angle-down"></svg></a>
+                                    {% endfor %}
+
                                     <ul class="dropdown-menu">
-                                        <li><a>50件</a></li>
-                                        <li><a>100件</a></li>
+                                        {% for pageMax in pageMaxis if pageMax.name != page_count %}
+                                            <li><a href="{{ path('admin_mail_magazine', {'page_no': 1, 'page_max': pageMax.name}) }}">{{ pageMax.name|e }}件</a></li>
+                                        {% endfor %}
                                     </ul>
                                 </li>
                                 {# var3.0.0では未対応
