--- a/View/admin/template_edit.twig
+++ b/View/admin/template_edit.twig
@@ -18,9 +18,8 @@
 
 {% block main %}
     <form role="form" name="content_page_form" id="content_page_form" method="post"
-          action="{{ url('admin_mail_magazine_template_commit') }}">
+          action="{{ url('admin_mail_magazine_template_commit', { id: Template.id } ) }}">
         {{ form_widget(form._token) }}
-        {{ form_widget(form.id) }}
         <div class="row" id="aside_wrap">
             <div class="col-md-9">
                 <div class="box form-horizontal">
@@ -43,6 +42,14 @@
                             <div class="col-sm-9 col-lg-10">
                                 {{ form_widget(form.body) }}
                                 {{ form_errors(form.body) }}
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            {{ form_label(form.htmlBody) }}
+                            <div class="col-sm-9 col-lg-10">
+                                {{ form_widget(form.htmlBody) }}
+                                {{ form_errors(form.htmlBody) }}
                             </div>
                         </div>
 
