--- a/View/admin/template_select.twig
+++ b/View/admin/template_select.twig
@@ -60,6 +60,7 @@
                         {{ form_row(form.template) }}
                         {{ form_row(form.subject, {'value' : new_subject}) }}
                         {{ form_row(form.body, {'value' : new_body}) }}
+                        {{ form_row(form.htmlBody, {'value' : new_htmlBody}) }}
 
                         <div style="display: none">
                             {{ form_rest(form) }}
