--- a/View/admin/confirm.twig
+++ b/View/admin/confirm.twig
@@ -46,13 +46,17 @@
                         <table class="table table-striped">
                             <tbody>
                                 <tr>
-                                    <th style="width: 20%;">Subject</th>
+                                    <th style="width: 20%;">件名</th>
                                     <td>{{ subject_itm }}</td>
                                 </tr>
                                 <tr>
-                                    <th>本文</th>
+                                    <th>本文 (テキスト形式)</th>
                                     <td><xmp>{{ body_itm }}</xmp></td>
                                 </td>
+                                <tr>
+                                    <th>本文 (HTML形式)</th>
+                                    <td><xmp>{{ htmlBody_itm|raw }}</xmp></td>
+                                </tr>
                             </tbody>
                         </table>
                         <div style="display: none">
