--- a/View/admin/preview.twig
+++ b/View/admin/preview.twig
@@ -32,8 +32,12 @@
                         <td>{{ Template.subject }}</td>
                     </tr>
                     <tr>
-                        <th>本文</th>
+                        <th>本文 (テキスト形式)</th>
                         <td><xmp>{{ Template.body }}</xmp></td>
+                    </tr>
+                    <tr>
+                        <th>本文 (HTML形式)</th>
+                        <td><xmp>{{ Template.htmlBody|raw }}</xmp></td>
                     </tr>
                 </tbody>
             </table>
