--- a/View/admin/template_select.twig
+++ b/View/admin/template_select.twig
@@ -59,13 +59,13 @@
 
                         {{ form_row(form.template) }}
                         {{ form_row(form.subject, {'value' : new_subject}) }}
-                        {{ form_row(form.body, {'value' : new_body}) }}
-                        {{ form_row(form.htmlBody, {'value' : new_htmlBody}) }}
+                        {{ form_row(form.body, {'value' : new_body, 'attr' : { 'rows' : 20 }}) }}
+                        {{ form_row(form.htmlBody, {'value' : new_htmlBody, 'attr' : { 'rows' : 20 }}) }}
 
                         <div style="display: none">
                             {{ form_rest(form) }}
                         </div>
-
+                        <span class="help-block">※ 名前差し込み時は {name} といれてください</span>
                     </div><!-- /.box-body -->
                 </div><!-- /.box -->
 
