--- a/View/admin/history_list.twig
+++ b/View/admin/history_list.twig
@@ -12,7 +12,7 @@
 {% set menus = ['mailmagazine', 'mailmagazine_history'] %}
 
 {% block title %}メルマガ管理{% endblock %}
-{% block sub_title %}配信履歴管理{% endblock %}
+{% block sub_title %}配信履歴{% endblock %}
 
 {% block javascript %}
     <script src="{{ app.config.admin_urlpath }}/assets/js/vendor/jquery.ui/jquery.ui.core.min.js"></script>
