--- a/View/admin/confirm.twig
+++ b/View/admin/confirm.twig
@@ -70,43 +70,47 @@
 {% endblock javascript%}
 
 {% block main %}
-
+    <form name="form1" role="form" class="form-horizontal" id="form1" method="post" action="">
+    {{ form_widget(form._token) }}
     <div class="row" id="aside_wrap">
-        <form name="form1" role="form" class="form-horizontal" id="form1" method="post" action="">
-            {{ form_widget(form._token) }}
+        <div id="detail_wrap" class="col-md-9">
+            <div class="box">
+                <div class="box-header">
+                    <h3 class="box-title">配信内容の確認</h3>
+                </div><!-- /.box-header -->
+                <div class="box-body">
+                    <table class="table table-striped">
+                        <tbody>
+                            <tr>
+                                <th style="width: 20%;">件名</th>
+                                <td>{{ subject_itm }}</td>
+                            </tr>
+                            <tr>
+                                <th>本文 (テキスト形式)</th>
+                                <td><xmp>{{ body_itm }}</xmp></td>
+                            </tr>
+                            <tr>
+                                <th>本文 (HTML形式)</th>
+                                <td><xmp>{{ htmlBody_itm|raw }}</xmp></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div style="display: none">
+                        {{ form_rest(form) }}
+                    </div>
 
-            <div class="col-md-9">
-                <div class="box">
-                    <div class="box-header">
-                        <h3 class="box-title">配信内容の確認</h3>
-                    </div><!-- /.box-header -->
-                    <div class="box-body">
-                        <table class="table table-striped">
-                            <tbody>
-                                <tr>
-                                    <th style="width: 20%;">件名</th>
-                                    <td>{{ subject_itm }}</td>
-                                </tr>
-                                <tr>
-                                    <th>本文 (テキスト形式)</th>
-                                    <td><xmp>{{ body_itm }}</xmp></td>
-                                </tr>
-                                <tr>
-                                    <th>本文 (HTML形式)</th>
-                                    <td><xmp>{{ htmlBody_itm|raw }}</xmp></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div style="display: none">
-                            {{ form_rest(form) }}
-                        </div>
-
-                    </div><!-- /.box-body -->
-                </div><!-- /.box -->
+                </div><!-- /.box-body -->
+            </div><!-- /.box -->
+            <div id="detail_box__footer" class="row hidden-xs hidden-sm">
+                <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center btn_area">
+                    <p><a href="{{ url('plugin_mail_magazine') }}" onclick="changeAction('{{ url('plugin_mail_magazine_select') }}/{{id}}'); return false;">検索画面に戻る</a></p>
+                </div>
             </div>
-
+        </div>
+        
+        <div id="common_box" class="col-md-3">
             {# 配信するボタン #}
-            <div class="col-md-3" id="aside_column">
+            <div class="col_inner" id="aside_column">
                 <div class="col_inner">
                     <div class="box no-header">
                         <div class="box-body">
@@ -120,24 +124,9 @@
                     </div><!-- /.box -->
                 </div>
             </div><!-- /.col -->
-
-            {# テンプレート設定画面へ戻るボタン #}
-            <div class="col-md-3" id="aside_column">
-                <div class="col_inner">
-                    <div class="box no-header">
-                        <div class="box-body">
-                            <div class="row text-center">
-                                <div class="col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
-                                    <button class="btn btn-primary btn-block btn-lg" onclick="changeAction('{{ url('plugin_mail_magazine_select') }}/{{id}}'); return false;">配信内容の設定へ戻る</button>
-                                </div>
-                            </div>
-                        </div><!-- /.box-body -->
-                    </div><!-- /.box -->
-                </div>
-            </div><!-- /.col -->
-        </form>
+        </div>
     </div>
-
+    </form>
 
 {% endblock %}
 {% block modal %}
