--- a/View/admin/template_select.twig
+++ b/View/admin/template_select.twig
@@ -45,66 +45,53 @@
 {% endblock javascript%}
 
 {% block main %}
-
+    <form name="form1" role="form" class="form-horizontal" id="form1" method="post" action="">
+    {{ form_widget(form._token) }}
     <div class="row" id="aside_wrap">
-        <form name="form1" role="form" class="form-horizontal" id="form1" method="post" action="">
-            {{ form_widget(form._token) }}
+        <div id="detail_wrap" class="col-md-9">
+            <div class="box">
+                <div class="box-header">
+                    <h3 class="box-title">配信内容の設定</h3>
+                </div><!-- /.box-header -->
+                <div class="box-body">
 
-            <div class="col-md-9">
-                <div class="box">
-                    <div class="box-header">
-                        <h3 class="box-title">配信内容の設定</h3>
-                    </div><!-- /.box-header -->
+                    {{ form_row(form.template) }}
+                    {{ form_row(form.subject, {'value' : new_subject}) }}
+                    {{ form_row(form.body, {'value' : new_body, 'attr' : { 'rows' : 20 }}) }}
+                    {{ form_row(form.htmlBody, {'value' : new_htmlBody, 'attr' : { 'rows' : 20 }}) }}
+
+                    <div style="display: none">
+                        {{ form_rest(form) }}
+                    </div>
+                    <span class="help-block">※ 名前差し込み時は {name} といれてください</span>
+                </div><!-- /.box-body -->
+            </div><!-- /.box -->
+
+            <div id="detail_box__footer" class="row hidden-xs hidden-sm">
+                <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center btn_area">
+                    <p><a href="{{ url('plugin_mail_magazine') }}" onclick="changeAction('{{ url('plugin_mail_magazine') }}'); return false;">配信内容の設定に戻る</a></p>
+                </div>
+            </div>
+        </div>
+        <div id="common_box" class="col-md-3">
+            {# 登録ボタン #}
+            <div class="col_inner" id="aside_column">
+                <div class="box no-header">
                     <div class="box-body">
-
-                        {{ form_row(form.template) }}
-                        {{ form_row(form.subject, {'value' : new_subject}) }}
-                        {{ form_row(form.body, {'value' : new_body, 'attr' : { 'rows' : 20 }}) }}
-                        {{ form_row(form.htmlBody, {'value' : new_htmlBody, 'attr' : { 'rows' : 20 }}) }}
-
-                        <div style="display: none">
-                            {{ form_rest(form) }}
+                        <div class="row text-center">
+                            <div class="col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
+                                <button class="btn btn-primary btn-block btn-lg" onclick="changeAction('{{ url('plugin_mail_magazine_confirm') }}/' + document.form1.mail_magazine_template.value); return false;">確認画面へ</button>
+                            </div>
                         </div>
-                        <span class="help-block">※ 名前差し込み時は {name} といれてください</span>
+
                     </div><!-- /.box-body -->
                 </div><!-- /.box -->
-
-            </div>
-
-            {# 登録ボタン #}
-            <div class="col-md-3" id="aside_column">
-                <div class="col_inner">
-                    <div class="box no-header">
-                        <div class="box-body">
-                            <div class="row text-center">
-                                <div class="col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
-                                    <button class="btn btn-primary btn-block btn-lg" onclick="changeAction('{{ url('plugin_mail_magazine_confirm') }}/' + document.form1.mail_magazine_template.value); return false;">確認画面へ</button>
-                                </div>
-                            </div>
-
-                        </div><!-- /.box-body -->
-                    </div><!-- /.box -->
-                </div>
             </div><!-- /.col -->
-
-            {# 検索画面に戻るボタン #}
-            <div class="col-md-3" id="aside_column">
-                <div class="col_inner">
-                    <div class="box no-header">
-                        <div class="box-body">
-                            <div class="row text-center">
-                                <div class="col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
-                                    <button class="btn btn-primary btn-block btn-lg" onclick="changeAction('{{ url('plugin_mail_magazine') }}'); return false;">検索画面に戻る</button>
-                                </div>
-                            </div>
-                        </div><!-- /.box-body -->
-                    </div><!-- /.box -->
-                </div>
-            </div><!-- /.col -->
-
-
-        </form>
+        </div>
     </div>
+    </form>
+    
+
 
 
 {% endblock %}
