削除された会員が404になるのでリンクを削除

--- a/View/admin/hitsory_result.twig
+++ b/View/admin/hitsory_result.twig
@@ -70,9 +70,7 @@
                                             {{ result.status }}
                                         {% endif %}
                                     </td>
-                                    <td>
-                                        <a href="{{ url('admin_customer_edit', { id : result.customerId }) }}">{{ result.customerId }}</a>
-                                    </td>
+                                    <td>{{ result.customerId }}</td>
                                     <td>{{ result.email }}</td>
                                     <td>{{ result.name }}</td>
                                 </tr>
